# OceanGL

./: .clang-format  CMakeLists.txt  README.md  compile_commands.json  run.sh
assets/shaders/: triangle.frag  triangle.vert
src/: main.cpp
